# nonebotworks

awesome-bot-sample/: .env.prod  README.md  pyproject.toml
awesome-bot-sample/accounts/binary/: accounts.json
awesome-bot-sample/awesome-bot/plugins/weather/: __init__.py
dodola-sample/: .env.prod  README.md  pyproject.toml  requirements.txt
dodola-sample/accounts/binary/: accounts.json
dodola-sample/dodola/plugins/getcfrating/: __init__.py
dodola-sample/dodola/plugins/getcontestinfo/: __init__.py
dodola-sample/dodola/plugins/gethelpbook/: __init__.py
dodola-sample/dodola/plugins/gettomorrowcontestinfo/: __init__.py
dodola-sample/dodola/plugins/randomproblem/: __init__.py
dodola-sample/dodola/plugins/simplereply/: __init__.py
