[project]
name = "awesome-bot"
version = "0.1.0"
description = "awesome-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_gocqhttp"]
plugin_dirs = ["awesome-bot/plugins"]   # 修改的地方
builtin_plugins = ["echo"]
